---
references:
  - "File: /MultifidelityModel.py"
  - "File: /AcquisitionFunction.py"
  - "File: /EGOOptimizer.py"
  - "File: /ExperimentData.py"
  - "File: /GaussianProcess.py"
  - "File: /Kernel.py"
  - "File: /Simulator.py"
generationTime: 2026-09-16T08:17:47.122Z
---
classDiagram
    class MultifidelityModel {
        +int L
        +__init__(int L) None
        +fit(ExperimentData experiment_data) None
        +predict(Array x_new) Array
    }

    class AcquisitionFunction {
        +MultifidelityModel model
        +List costs
        +__init__(MultifidelityModel model, List costs) None
        -_expected_improvement(Float f_hat, Float sigma2_hat, Float f_best) Float
        -_augmented_expected_improvement() Float
        +evaluate_merit(Array x, int candidate_level) Float
    }

    class EGOOptimizer {
        +ExperimentData data
        +MultifidelityModel model
        +Simulator simulator
        +AcquisitionFunction AcquisitionFunction
        +__init__(ExperimentData data, MultifidelityModel model, Simulator simulator, AcquisitionFunction AcquisitionFunction) None
        +step() None
        +run(int n_iterations) None
        -_find_next_point() Array
    }

    class ExperimentData {
        +List bounds
        +List costs
        +int dim
        +Array X_train
        +Array Y_train
        +__init__(List bounds, List costs) None
        +generate_initial_design(List n_points_list) None
        +add_observation(int level, Array x_new, Float y_new) None
        +check_already_evaluated(int level, Array x) Boolean
    }

    class GaussianProcess {
        +Kernel kernel
        +__init__(Kernel kernel) None
        +fit(Array X, Array Y) None
        +predict(Array X_new) Array
        -_compute_log_likelyhood(Array theta_flat) Float
    }

    class Kernel {
        +__call__(Array x, Array y) Float
        +get_covariance_matrix(Array X) Matrix
        +get_cross_variance_vector(Array x_new, Array X) Array
    }

    class SquaredExponentialKernel {
        +List lengthscale
        +Float variance
        +__init__(List Theta) None
        +__call__(Array x, Array y) Float
    }

    class Simulator {
        +int L
        +__init__(int L) None
        +evaluate(Array x_normalized, int level) Float
        -_physical_model() Float
    }

    Kernel <|-- SquaredExponentialKernel
    MultifidelityModel "1" --* "*" GaussianProcess : manages
    GaussianProcess "1" --> "1" Kernel : uses
    AcquisitionFunction "1" --> "1" MultifidelityModel : evaluates
    EGOOptimizer "1" o-- "1" ExperimentData : uses
    EGOOptimizer "1" o-- "1" MultifidelityModel : uses
    EGOOptimizer "1" o-- "1" Simulator : uses
    EGOOptimizer "1" o-- "1" AcquisitionFunction : uses